--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html lang="en">
   <head>
     <title>Unsubscribe</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" href="/favicon.png">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/png" href="/favicon.png" />
     <style>
       body {
         font-family: Arial, sans-serif;
@@ -18,6 +18,7 @@
         padding: 20px;
         border-radius: 8px;
         box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        position: relative;
       }
       h1 {
         color: #333;
@@ -28,13 +29,15 @@
       }
       textarea {
         width: 100%;
-        height: 100px;
-        margin-top: 10px;
+        height: 100%;
+        position: absolute;
         padding: 10px;
+        top: 0px;
+        left: 0;
         font-size: 14px;
         border: 1px solid #ccc;
         border-radius: 4px;
-        resize: vertical;
+        resize: none;
       }
       .button {
         display: inline-block;
@@ -51,12 +54,32 @@
       .button:hover {
         background-color: #0056b3;
       }
+
+      #player-container {
+        /* display: none; */
+        position: relative;
+        padding-bottom: 56.25%;
+        overflow: hidden;
+        margin: 0 auto;
+      }
+
+      #player {
+        border: 0;
+        display: none;
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        top: 0;
+        left: 0;
+        z-index: 1;
+      }
     </style>
     <!-- Google tag (gtag.js) -->
     <script
       async
       src="https://www.googletagmanager.com/gtag/js?id=G-N27DZQPY9G"
     ></script>
+    <script src="https://www.youtube.com/iframe_api"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag() {
@@ -74,17 +97,56 @@
         To help improve our services, we would be grateful if you could tell us
         why:
       </p>
-      <textarea></textarea>
+      <div id="player-container">
+        <iframe
+          id="player"
+          src="https://www.youtube.com/embed/Svj1bZz2mXw?si=HZAhMi2tOWEAAqtO&enablejsapi=1"
+          title="YouTube video player"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          referrerpolicy="strict-origin-when-cross-origin"
+          allowfullscreen
+        ></iframe>
+        <textarea id="reason" height="20"></textarea>
+      </div>
       <button type="button" class="button" id="unsubscribe-button">
         Unsubscribe
       </button>
     </div>
     <script>
+      const playerPromise = new Promise((resolve) => {
+        window.onYouTubeIframeAPIReady = function () {
+          const player = new YT.Player("player", {
+            events: {
+              onReady: function (event) {
+                resolve(event.target);
+              },
+            },
+          });
+        };
+      });
+
       document
         .querySelector("#unsubscribe-button")
         .addEventListener("click", function () {
           gtag("event", "unsubscribe", {
-            reason: document.querySelector("textarea").value,
+            reason: document.getElementById("reason")?.value,
+          });
+
+          playerPromise.then((player) => {
+            const playerEl = player.getIframe();
+            const requestFullScreen =
+              playerEl.requestFullscreen ||
+              playerEl.mozRequestFullScreen ||
+              playerEl.webkitRequestFullScreen ||
+              playerEl.msRequestFullscreen;
+
+            if (typeof requestFullScreen === "function") {
+              requestFullScreen.call(playerEl);
+            }
+
+            playerEl.style.display = "block";
+
+            player.playVideo();
           });
         });
     </script>
