--- a/index.html
+++ b/index.html
@@ -28,12 +28,7 @@
         color: #666;
       }
       textarea {
-        width: 100%;
-        height: 100%;
-        position: absolute;
         padding: 10px;
-        top: 0px;
-        left: 0;
         font-size: 14px;
         border: 1px solid #ccc;
         border-radius: 4px;
@@ -63,15 +58,42 @@
         margin: 0 auto;
       }
 
-      #player {
-        border: 0;
-        display: none;
+      #player-container * {
         width: 100%;
         height: 100%;
         position: absolute;
         top: 0;
         left: 0;
+      }
+
+      textarea {
+        display: none;
+      }
+
+      #player {
+        border: 0;
+        display: none;
         z-index: 1;
+      }
+
+      #message {
+        display: none;
+        z-index: 2;
+        background-color: #fff;
+        color: #666;
+        font-size: 24px;
+        text-align: center;
+        padding-top: 20%;
+      }
+
+      #player-container.initial #reason {
+        display: block;
+      }
+      #player-container.playing #player {
+        display: block;
+      }
+      #player-container.finished #message {
+        display: block;
       }
     </style>
     <!-- Google tag (gtag.js) -->
@@ -97,7 +119,7 @@
         To help improve our services, we would be grateful if you could tell us
         why:
       </p>
-      <div id="player-container">
+      <div id="player-container" class="initial">
         <iframe
           id="player"
           src="https://www.youtube.com/embed/Svj1bZz2mXw?si=HZAhMi2tOWEAAqtO&enablejsapi=1"
@@ -107,18 +129,64 @@
           allowfullscreen
         ></iframe>
         <textarea id="reason" height="20"></textarea>
+        <div id="message">
+          Wow, that's dedication. Thank you for your feedback.
+        </div>
       </div>
       <button type="button" class="button" id="unsubscribe-button">
         Unsubscribe
       </button>
     </div>
     <script>
+      const container = document.getElementById("player-container");
+
+      function exitFullScreen() {
+        try {
+          if (document.exitFullscreen) {
+            document.exitFullscreen();
+          } else if (document.mozCancelFullScreen) {
+            /* Firefox */
+            document.mozCancelFullScreen();
+          } else if (document.webkitExitFullscreen) {
+            /* Chrome, Safari and Opera */
+            document.webkitExitFullscreen();
+          } else if (document.msExitFullscreen) {
+            /* IE/Edge */
+            document.msExitFullscreen();
+          }
+        } catch {}
+      }
+
+      function requestFullScreen(element) {
+        try {
+          if (element.requestFullscreen) {
+            element.requestFullscreen();
+          } else if (element.mozRequestFullScreen) {
+            /* Firefox */
+            element.mozRequestFullScreen();
+          } else if (element.webkitRequestFullScreen) {
+            /* Chrome, Safari and Opera */
+            element.webkitRequestFullScreen();
+          } else if (element.msRequestFullscreen) {
+            /* IE/Edge */
+            element.msRequestFullscreen();
+          }
+        } catch {}
+      }
+
       const playerPromise = new Promise((resolve) => {
         window.onYouTubeIframeAPIReady = function () {
           const player = new YT.Player("player", {
             events: {
               onReady: function (event) {
                 resolve(event.target);
+              },
+              onStateChange: function (event) {
+                if (event.data !== YT.PlayerState.ENDED) return;
+
+                gtag("event", "video_completed");
+                exitFullScreen();
+                container.className = "finished";
               },
             },
           });
@@ -134,17 +202,9 @@
 
           playerPromise.then((player) => {
             const playerEl = player.getIframe();
-            const requestFullScreen =
-              playerEl.requestFullscreen ||
-              playerEl.mozRequestFullScreen ||
-              playerEl.webkitRequestFullScreen ||
-              playerEl.msRequestFullscreen;
+            requestFullScreen(playerEl);
 
-            if (typeof requestFullScreen === "function") {
-              requestFullScreen.call(playerEl);
-            }
-
-            playerEl.style.display = "block";
+            container.className = "playing";
 
             player.playVideo();
           });
