allow providing email, and capture

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
   </head>
   <body>
     <div class="container">
-      <h1>Unsubscribe <span id="email"></span> from Emails</h1>
+      <h1>Unsubscribe <span id="email">from Emails</span></h1>
       <p>
         To help improve our services, we would be grateful if you could tell us
         why:
@@ -139,6 +139,12 @@
     </div>
     <script>
       const container = document.getElementById("player-container");
+
+        const search = new URLSearchParams(window.location.search);
+        if(search.has("email")) {
+          const emailEl = document.getElementById("email");
+          emailEl.textContent = search.get("email");
+        }
 
       function exitFullScreen() {
         try {
@@ -198,6 +204,7 @@
         .addEventListener("click", function () {
           gtag("event", "unsubscribe", {
             reason: document.getElementById("reason")?.value,
+            email: search.get("email")
           });
 
           playerPromise.then((player) => {
