--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         background-color: #f4f4f4;
         margin: 0;
         padding: 0;
+        height: 100%;
       }
       .container {
         max-width: 600px;
@@ -33,6 +34,8 @@
         border: 1px solid #ccc;
         border-radius: 4px;
         resize: none;
+        width: 100%;
+        height: 100px;
       }
       .button {
         display: inline-block;
@@ -51,7 +54,6 @@
       }
 
       #player-container {
-        /* display: none; */
         position: relative;
         padding-bottom: 56.25%;
         overflow: hidden;
@@ -66,13 +68,8 @@
         left: 0;
       }
 
-      textarea {
-        display: none;
-      }
-
       #player {
         border: 0;
-        display: none;
         z-index: 1;
       }
 
@@ -83,16 +80,24 @@
         color: #666;
         font-size: 24px;
         text-align: center;
-        padding-top: 20%;
       }
 
-      #player-container.initial #reason {
+      #form {
+        display: none;
+      }
+      .initial #form {
         display: block;
       }
-      #player-container.playing #player {
+      #player-container {
+        display: none;
+      }
+      .playing #player-container {
         display: block;
       }
-      #player-container.finished #message {
+      #message {
+        display: none;
+      }
+      .finished #message {
         display: block;
       }
     </style>
@@ -115,36 +120,40 @@
   <body>
     <div class="container">
       <h1>Unsubscribe <span id="email">from Emails</span></h1>
-      <p>
-        To help improve our services, we would be grateful if you could tell us
-        why:
-      </p>
-      <div id="player-container" class="initial">
-        <iframe
-          id="player"
-          src="https://www.youtube.com/embed/Svj1bZz2mXw?si=HZAhMi2tOWEAAqtO&enablejsapi=1"
-          title="YouTube video player"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-          referrerpolicy="strict-origin-when-cross-origin"
-          allowfullscreen
-        ></iframe>
-        <textarea id="reason" height="20"></textarea>
+      <div id="inner-container" class="initial">
+        <div id="player-container" class="initial">
+          <iframe
+            id="player"
+            src="https://www.youtube.com/embed/Svj1bZz2mXw?si=HZAhMi2tOWEAAqtO&enablejsapi=1"
+            title="YouTube video player"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            referrerpolicy="strict-origin-when-cross-origin"
+            allowfullscreen
+          ></iframe>
+        </div>
+        <div id="form">
+          <p>
+            To help improve our services, we would be grateful if you could tell
+            us why:
+          </p>
+          <textarea id="reason" height="20"></textarea>
+          <button type="button" class="button" id="unsubscribe-button">
+            Unsubscribe
+          </button>
+        </div>
         <div id="message">
           Wow, that's dedication. Thank you for your feedback.
         </div>
       </div>
-      <button type="button" class="button" id="unsubscribe-button">
-        Unsubscribe
-      </button>
     </div>
     <script>
-      const container = document.getElementById("player-container");
+      const container = document.getElementById("inner-container");
 
-        const search = new URLSearchParams(window.location.search);
-        if(search.has("email")) {
-          const emailEl = document.getElementById("email");
-          emailEl.textContent = search.get("email");
-        }
+      const search = new URLSearchParams(window.location.search);
+      if (search.has("email")) {
+        const emailEl = document.getElementById("email");
+        emailEl.textContent = search.get("email");
+      }
 
       function exitFullScreen() {
         try {
@@ -197,7 +206,7 @@
               onError: function (event) {
                 console.error(event);
                 reject(event);
-              }
+              },
             },
           });
         };
@@ -208,7 +217,7 @@
         .addEventListener("click", function () {
           gtag("event", "unsubscribe", {
             reason: document.getElementById("reason")?.value,
-            email: search.get("email")
+            email: search.get("email"),
           });
 
           playerPromise.then((player) => {
