--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         margin: 0 auto;
       }
 
-      #player-container * {
+      #player-container > video {
         width: 100%;
         height: 100%;
         position: absolute;
@@ -68,9 +68,15 @@
         left: 0;
       }
 
-      #player {
-        border: 0;
-        z-index: 1;
+      .hover {
+        text-align: center;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        background-color: rgba(0,0,0,.2);
+        opacity: 0;
+        transition: opacity 0.5s ease-in;
       }
 
       #message {
@@ -100,6 +106,10 @@
       .finished #message {
         display: block;
       }
+
+      #player-container:hover .hover {
+        opacity: 100;
+      }
     </style>
     <!-- Google tag (gtag.js) -->
     <script
@@ -122,14 +132,12 @@
       <h1>Unsubscribe <span id="email">from Emails</span></h1>
       <div id="inner-container" class="initial">
         <div id="player-container" class="initial">
-          <iframe
-            id="player"
-            src="https://www.youtube.com/embed/Svj1bZz2mXw?si=HZAhMi2tOWEAAqtO&enablejsapi=1"
-            title="YouTube video player"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-            referrerpolicy="strict-origin-when-cross-origin"
-            allowfullscreen
-          ></iframe>
+          <video controls playsinline>
+            <source src="video.mp4" type="video/mp4" />
+          </video>
+          <div class="hover">
+            <p>Never Gonna Give You Up but the lyrics are in alphabetical order</p>
+          </div>
         </div>
         <div id="form">
           <p>
@@ -148,34 +156,13 @@
     </div>
     <script>
       const container = document.getElementById("inner-container");
+      const videoEl = document.querySelector("#player-container video");
 
       const search = new URLSearchParams(window.location.search);
       if (search.has("email")) {
         const emailEl = document.getElementById("email");
         emailEl.textContent = search.get("email");
       }
-
-      const playerPromise = new Promise((resolve, reject) => {
-        window.onYouTubeIframeAPIReady = function () {
-          const player = new YT.Player("player", {
-            events: {
-              onReady: function (event) {
-                resolve(event.target);
-              },
-              onStateChange: function (event) {
-                if (event.data !== YT.PlayerState.ENDED) return;
-
-                gtag("event", "video_completed");
-                container.className = "finished";
-              },
-              onError: function (event) {
-                console.error(event);
-                reject(event);
-              },
-            },
-          });
-        };
-      });
 
       document
         .querySelector("#unsubscribe-button")
@@ -185,13 +172,15 @@
             email: search.get("email"),
           });
 
-          playerPromise.then((player) => {
-            const playerEl = player.getIframe();
-
-            container.className = "playing";
-
-            player.playVideo();
-          });
+          container.className = "playing";
+          videoEl.play();
+          videoEl.addEventListener(
+            "ended",
+            function () {
+              container.className = "finished";
+            },
+            { once: true }
+          );
         });
     </script>
   </body>
